--- a/app/templates/accounts/products.html
+++ b/app/templates/accounts/products.html
@@ -1,6 +1,36 @@
 {% extends "accounts/main.html"%}
 
 {%block content%}
-    <h1>Products Page</h1>
+    <h1>Baby Dimple's Products Page</h1>
+    <table class="table table-striped">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Name</th>
+            <th scope="col">Product</th>
+            <th scope="col">Price</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+        </tbody>
+      </table>
     
 {% endblock %} 
