Need to fix dashboard url, and im on forms

--- a/app/templates/accounts/customers.html
+++ b/app/templates/accounts/customers.html
@@ -19,7 +19,7 @@
 		<div class="card card-body">
 			<h5>Contact Information</h5>
 			<hr>
-			<p>Email: </p>
+			<p>Email: {{customer.email}}</p>
 			<p>Phone: </p>
 		</div>
 	</div>
