--- a/app/templates/accounts/products.html
+++ b/app/templates/accounts/products.html
@@ -1,36 +1,33 @@
-{% extends "accounts/main.html"%}
+{%  extends 'accounts/main.html' %}
 
-{%block content%}
-    <h1>Baby Dimple's Products Page</h1>
-    <table class="table table-striped">
-        <thead>
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">Name</th>
-            <th scope="col">Product</th>
-            <th scope="col">Price</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-        </tbody>
-      </table>
-    
-{% endblock %} 
+{% block content %}
+
+		<br>
+
+		<div class="row">
+			<div class="col-md">
+				<div class="card card-body">
+					<h5>Products</h5>
+				</div>
+				<div class="card card-body">
+					<table class="table">
+						<tr>
+							<th>Product</th>
+							<th>Category</th>
+							<th>Price</th>
+						</tr>
+						{% for p in products %}
+            <tr>
+            <td>{{p.name}}</td>
+            <td>{{p.category}}</td>
+            <td>{{p.price}}</td>
+            </tr>
+            {% endfor %}
+					</table>
+				</div>
+			</div>
+			
+		</div>
+
+{% endblock content %}
+
