--- a/app/templates/accounts/dashboard.html
+++ b/app/templates/accounts/dashboard.html
@@ -6,36 +6,58 @@
 {% include "accounts/status.html"%}
 
 {% comment %} #Start of customer block {% endcomment %}
-<div class = "row">
-    <div class= "col-md-5">
-        <h4>Customers</h4>
-        <hr>
-        <div class= "card-body">
-            <a class= "create-customer" href= ""> Create a Customer</a>
-            <table class= "table">
-                <tr>
-                    <th></th>
-                    <th>Your Customers<th>
-                    <th>Your Orders<th>
-                </tr>
-            </table>
-        </div>
-    </div>
-</div> 
+<br>
 
 <div class="row">
-<div class="col-md-7">
-    <h4>Orders</h4>
-    <hr>
-    <div class= "card-body">
-        <a class= "create-order" href=""> Create a Order</a>
-        <table class= "table">
-            <tr>
-                <th>Product Type</th>
-                <th>Date Purchased</th>
-                <th>Status Of Order</th>
-                <th>Update Order</th>
-                <th>Remove Order</th>
-            </tr>
+	<div class="col-md-5">
+		<h5>YOUR CUSTOMERS:</h5>
+		<hr>
+		<div class="card card-body">
+			<a class="btn btn-primary  btn-sm btn-block" href="">Create Customer</a>
+			<table class="table table-sm">
+				<tr>
+					<th>Your Customer</th>
+					<th>Your Customer's Phone</th>
+				</tr>
+                    </tr>
+                    {% for c in customers %}
+                    <tr>
+                        <td>{{c.name}}</td>
+                        <td>{{c.phone}}</td>
+                    </tr>
+                    {% endfor %}
+			</table>
+		</div>
+	</div>
+
+	<div class="col-md-7">
+		<h5>YOUR LAST 5 ORDERS</h5>
+		<hr>
+		<div class="card card-body">
+			<a class="btn btn-primary  btn-sm btn-block" href="{%  url create_order %}">Create Order</a>
+			<table class="table table-sm">
+				<tr>
+					<th>Product Type</th>
+					<th>Date Purchased</th>
+					<th>Status of Order</th>
+					<th>Update Order</th>
+					<th>Remove Order</th>
+                </tr>
+
+                {% for o in orders %}
+                <tr>
+                    <td>{{o.product}}</td>
+                    <td>{{o.date}}</td>
+                    <td>{{o.status}}</td>
+                    <td><a href="">Update</td>
+                    <td><a href="">Delete</td>
+                </tr>
+                {% endfor %}
+
+			</table>
+		</div>
+	</div>
+
+</div>
 {% endblock %} 
 
