--- a/app/templates/accounts/index.html
+++ b/app/templates/accounts/index.html
@@ -63,7 +63,7 @@
     <div class="col-6 col-md">
       <h5>Resources</h5>
       <ul class="list-unstyled text-small">
-        <li><a class="link-secondary" href="#">Facebook</a></li>
+        <li><a class="link-secondary" href="https://www.facebook.com/Babydimpleboutique-101408638264349/">Facebook</a></li>
         <li><a class="link-secondary" href="#">Instagram</a></li>
       </ul>
 </footer>
