--- a/app/templates/accounts/navbar.html
+++ b/app/templates/accounts/navbar.html
@@ -1,19 +1,21 @@
 {% comment %} #Bootstrap Nav Bar Code {% endcomment %}
-  <nav class="navbar navbar-light" style="background-color: #F4F4F4;">
+  {% load static %}
+<nav class="navbar navbar-light" style="background-color: #F4F4F4;">
     <a class="navbar-brand" href="#">Navbar w/ text</a>
+    <img src="{% static 'static/css/images/l.png' %}">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarText">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="{% url "home" %}">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="products">Products</a>
+          <a class="nav-link" href="{% url "products" %}">Products</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="customers">Customers</a>
+          <a class="nav-link" href="{% url "customers" %}">Customers</a>
         </li>
       </ul>
     </div>
